// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle should render whith changing state 1`] = `
<div
  className="content "
  data-cy="c-card"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cy="c-head"
  />
  <div
    className="circle   changing"
    data-cy="circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-cy="c-tail"
  />
</div>
`;

exports[`Circle should render whith default state 1`] = `
<div
  className="content "
  data-cy="c-card"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cy="c-head"
  />
  <div
    className="circle   default"
    data-cy="circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-cy="c-tail"
  />
</div>
`;

exports[`Circle should render whith head 1`] = `
<div
  className="content "
  data-cy="c-card"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head string"
    data-cy="c-head"
  >
    test
  </div>
  <div
    className="circle   default"
    data-cy="circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-cy="c-tail"
  />
</div>
`;

exports[`Circle should render whith index 1`] = `
<div
  className="content "
  data-cy="c-card"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cy="c-head"
  />
  <div
    className="circle   default"
    data-cy="circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  >
    1
  </p>
  <div
    className="text text_type_input text_color_input mt-4 absolute tail60 element"
    data-cy="c-tail"
  />
</div>
`;

exports[`Circle should render whith letter 1`] = `
<div
  className="content "
  data-cy="c-card"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cy="c-head"
  />
  <div
    className="circle   default"
    data-cy="circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
    >
      a
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-cy="c-tail"
  />
</div>
`;

exports[`Circle should render whith modified state 1`] = `
<div
  className="content "
  data-cy="c-card"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cy="c-head"
  />
  <div
    className="circle   modified"
    data-cy="circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-cy="c-tail"
  />
</div>
`;

exports[`Circle should render whith prop isSmall === true 1`] = `
<div
  className="content "
  data-cy="c-card"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cy="c-head"
  />
  <div
    className="circle  small default"
    data-cy="circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-cy="c-tail"
  />
</div>
`;

exports[`Circle should render whith react-element in head 1`] = `
<div
  className="content "
  data-cy="c-card"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cy="c-head"
  >
    <div
      className="content "
      data-cy="c-card"
    >
      <div
        className="text text_type_input text_color_input mb-4 absolute head element"
        data-cy="c-head"
      />
      <div
        className="circle   default"
        data-cy="circle"
      >
        <p
          className="text text_type_circle text_color_input letter"
        />
      </div>
      <p
        className="text text_type_input text_color_input mt-4 absolute index"
      />
      <div
        className="text text_type_input text_color_input mt-4 absolute tail30 element"
        data-cy="c-tail"
      />
    </div>
  </div>
  <div
    className="circle   default"
    data-cy="circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-cy="c-tail"
  />
</div>
`;

exports[`Circle should render whith react-element in tail 1`] = `
<div
  className="content "
  data-cy="c-card"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cy="c-head"
  />
  <div
    className="circle   default"
    data-cy="circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-cy="c-tail"
  >
    <div
      className="content "
      data-cy="c-card"
    >
      <div
        className="text text_type_input text_color_input mb-4 absolute head element"
        data-cy="c-head"
      />
      <div
        className="circle   default"
        data-cy="circle"
      >
        <p
          className="text text_type_circle text_color_input letter"
        />
      </div>
      <p
        className="text text_type_input text_color_input mt-4 absolute index"
      />
      <div
        className="text text_type_input text_color_input mt-4 absolute tail30 element"
        data-cy="c-tail"
      />
    </div>
  </div>
</div>
`;

exports[`Circle should render whith tail 1`] = `
<div
  className="content "
  data-cy="c-card"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cy="c-head"
  />
  <div
    className="circle   default"
    data-cy="circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 string"
    data-cy="c-tail"
  >
    test
  </div>
</div>
`;

exports[`Circle should render whithout letter 1`] = `
<div
  className="content "
  data-cy="c-card"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-cy="c-head"
  />
  <div
    className="circle   default"
    data-cy="circle"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-cy="c-tail"
  />
</div>
`;
